      from a lazy enumerator.  [Feature #15901]

    * Added Enumerator::Yielder#to_proc so that a Yielder object
      can be directly passed to another method as a block
      argument.  [Feature #15618]

Fiber::

  New method::

    * Added Fiber#raise that behaves like Fiber#resume but raises an
      exception on the resumed fiber.  [Feature #10344]

FrozenError::

  New method::

    * Added FrozenError#receiver to return the frozen object that
      modification was attempted on.  To set this object when raising
      FrozenError in Ruby code, pass it as the second argument to
      FrozenError.new.

GC::

  New method::

    * Added GC.compact method for compacting the heap.
      This function compacts live objects in the heap so that fewer pages may
      be used, and the heap may be more CoW friendly. [Feature #15626]

      Details on the algorithm and caveats can be found here:
      https://bugs.ruby-lang.org/issues/15626

IO::

  New method::

    * Added IO#set_encoding_by_bom to check the BOM and set the external
      encoding.  [Bug #15210]

Integer::

  Modified method::

    * Integer#[] now supports range operation.  [Feature #8842]

         0b01001101[2, 4]  #=> 0b0011
         0b01001100[2..5]  #=> 0b0011
         0b01001100[2...6] #=> 0b0011
             ^^^^

NilClass / TrueClass / FalseClass::

  Modified method::

    * NilClass#to_s, TrueClass#to_s and FalseClass#to_s now always returns a
      frozen String. The returned String is always the same for each of these
      values. This change is experimental. [Feature #16150]

Module::

  New method::

    * Added Module#const_source_location to retrieve the location where a
      constant is defined.  [Feature #10771]

    * Added Module#ruby2_keywords for marking a method as passing keyword
      arguments through a regular argument splat, useful when delegating
      all arguments to another method in a way that can be backwards
      compatible with older Ruby versions.  [Bug #16154]