@@ -236,10 +236,14 @@ class TestPath < Test::Unit::TestCase
     assert_equal(ext, File.extname('.a/b/d/test.rb'))
     unless /mswin|bccwin|mingw/ =~ RUBY_PLATFORM
       # trailing spaces and dots are ignored on NTFS.
-      ext = ''
+      ext = '.'
     end
     assert_equal(ext, File.extname('a.rb.'))
-    assert_equal('', File.extname('a.'))
+    if /mswin|bccwin|mingw/ =~ RUBY_PLATFORM
+      # trailing spaces and dots are ignored on NTFS.
+      ext = ''
+    end
+    assert_equal(ext, File.extname('a.'))
     assert_equal('', File.extname('.x'))
     assert_equal('', File.extname('..x'))
   end
